--- a/styles/text.css
+++ b/styles/text.css
@@ -1,50 +1,27 @@
-*{    
+* {    
+    box-sizing: border-box;;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-
-    
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #121212;
 }
 
-.maintext {
-    text-align: center;
-	position: absolute;
-    top: 50%;
-    left: 50%;
+.header{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+
+.navbar {
+    display: block;
+    padding: 15px;
+    background-color: #121212;
     color: #ffffff;
-    transform:translate(-50%,-50%);
 }
 
-.text1 {
-    font-size: 80px;
-    font-weight: 700;
-    letter-spacing: 20px;
-    margin-bottom: -40px;
-    position: relative;
-    animation: text 3s 1;
-}
+.container {
+    color: #ffffff;
 
-.text2 {
-    font-size: 25px;
-    color: #583b6e;
 
-}
-
-@keyframes text{
-    0%{
-
-        color: black;
-        margin-bottom: -40px;
-    }
-    30%{
-        letter-spacing: 25px;
-        margin-bottom:.40px;
-    }
-
-}
-
-.moon {
-	position: relative;
-	width: 100%;
-	height: 100vh;
 }
