--- a/styles/text.css
+++ b/styles/text.css
@@ -7,21 +7,30 @@
 }
 
 .header{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    width: 60%
+    margin: auto;
 }
 
+.header-slide {
+    display: flex;
+    width: 100%;
+    height: 500px;
+
+}
 
 .navbar {
     display: block;
     padding: 15px;
     background-color: #121212;
     color: #ffffff;
+    overflow: hidden;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    text-decoration: none;
+    overflow: hidden;
 }
 
 .container {
     color: #ffffff;
-
-
 }
